[gd_scene load_steps=9 format=2]

[ext_resource path="res://World/Shopkeeper.png" type="Texture" id=1]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/ShopKeeper.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.9848

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.27451, 0.670588, 0.4, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.27451, 0.670588, 0.4, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="ShopKeeper" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -57.0
margin_top = -44.0
margin_right = 57.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 114.0
margin_bottom = 14.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Buy Orb: 10c"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartButton" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 114.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Heart Dagger: 4c"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HeartButton" to="." method="_on_HeartButton_pressed"]

[editable path="PlayerDetectionZone"]
